syntax = "proto3";

package sum;

option java_package = "com.proto.sum";
option java_multiple_files = true;

message InputValue {
    int32 first_number = 1;
    int32 second_number = 2;
}

message InputRequest {
    InputValue input = 1;
}

message InputResponse {
    int32 result = 1;
}

service InputService {
    rpc Input(InputRequest) returns (InputResponse) {}
}